04-sgs.tf
resource "aws_security_group" "stevie_wonder_sg" {
  name        = "stevie_wonder_sg"
  description = "Allow SSH and ICMP traffic"
  vpc_id      = aws_vpc.james_brown_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_ips
  }

  ingress {
    description = "ICMP"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = var.allowed_ips
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.allowed_ips
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # -1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "stevie_wonder_sg"
  }
}

resource "aws_security_group" "superstition_efs_sg" {
  name        = "superstition_efs_sg"
  description = "Allow NFS traffic for EFS"
  vpc_id      = aws_vpc.james_brown_vpc.id

  ingress {
    description = "NFS"
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = var.allowed_ips
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # -1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "superstition_efs_sg"
  }
}
